# municipal-voicebot-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.embedder  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
data/documents/: albo-pretorio.html  biblioteca-pressacco.html  cambio-residenza.html  carta-identita-cie.html  certificati-anagrafici.html  edilizia-privata.html  ilia.html  orari-e-contatti.html  polizia-locale.html  pubblica-istruzione.html  ravvedimento-operoso.html  servizi-sociali.html  suap-attivita-produttive.html  taric.html  villa-manin-eventi.html
db/init/: 01_extensions.sql  02_docs_schema.sql  03_booking_schema.sql
embedder/: __init__.py  app.py  models.py
scripts/: download_model.py  ingest.py
src/municipal_mcp/: __init__.py  bookings.py  chunking.py  config.py  db.py  embeddings.py  instructions.py  models.py  retrieval.py  server.py  slots.py
src/municipal_mcp/tools/: __init__.py  appointments.py  documentation.py
tests/: conftest.py  test_appointments.py  test_chunking.py  test_retrieval.py  test_slots.py  test_tools_integration.py
